@@ -131,7 +131,12 @@ class Terminal(object):
         if sys.platform.startswith('win'):
             process = run(['explorer', url])
         else:
-            process = run(['open', url])
+            # TODO: Use shutil directly when Python 2.7 is removed
+            from whichcraft import which
+            if sys.platform.startswith('linux') and which('xdg-open'):
+                process = run(['xdg-open', url])
+            else:
+                process = run(['open', url])
         return True if process.returncode == 0 else False
 
     class Text(object):
